--- a/DCImobiliare/frontend/templates/frontend/index.html
+++ b/DCImobiliare/frontend/templates/frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewpoer" content="width=device-width" , initial-scale="1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
+    <link rel="stylesheet" href="../../src/assets/css/firstSector.css">
     <title>DCImobiliare</title>
 </head>
 
