--- a/DCImobiliare/frontend/src/assets/css/firstSector.css
+++ b/DCImobiliare/frontend/src/assets/css/firstSector.css
@@ -12,3 +12,75 @@
   background-size: cover !important;
   position: relative;
 }
+
+textarea {
+  resize: none;
+}
+
+.bodyForm {
+  background-color: #ffffff;
+}
+input[type="text"] {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #000000;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-radius: 0;
+}
+
+input[type="text"]:focus {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-bottom: 1px solid #1f9bcf;
+  background: transparent;
+}
+.letter-spacing-2 {
+  letter-spacing: 0.125rem !important;
+}
+.text-large {
+  font-size: 1.05vw !important;
+  line-height: 1.5rem !important;
+  opacity: 90 !important;
+}
+.title-extra-large {
+  font-size: 4vw !important;
+  line-height: 5.225rem !important;
+}
+
+.title-very-large {
+  font-size: 3vw !important;
+  line-height: 4.225rem !important;
+}
+.font-w-700 {
+  font-weight: 700 !important;
+}
+
+.background-full-width-section1 {
+  background-image: url("/static/background.jpg");
+  background-position: center center !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+}
+
+.background-full-width-section2 {
+  background-image: url("/static/backgroundServices.jpg");
+  background-position: center center !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+}
+
+@media (max-width: 1090px) {
+  .text-large {
+    font-size: 2.75rem !important;
+    line-height: 4.255rem !important;
+  }
+  .title-extra-large {
+    font-size: 5.25rem !important;
+    line-height: 4.79rem !important;
+  }
+  .title-very-large {
+    font-size: 3.55rem !important;
+    line-height: 3.825rem !important;
+  }
+}
