--- a/DCImobiliare/frontend/src/assets/css/firstSector.css
+++ b/DCImobiliare/frontend/src/assets/css/firstSector.css
@@ -20,7 +20,8 @@ textarea {
 .bodyForm {
   background-color: #ffffff;
 }
-input[type="text"] {
+input[type="text"],
+input[type="email"] {
   background: transparent;
   border: none;
   border-bottom: 1px solid #000000;
@@ -29,7 +30,8 @@ input[type="text"] {
   border-radius: 0;
 }
 
-input[type="text"]:focus {
+input[type="text"]:focus,
+input[type="email"]:focus {
   -webkit-box-shadow: none;
   box-shadow: none;
   border-bottom: 1px solid #1f9bcf;
