--- a/DCImobiliare/frontend/templates/frontend/index.html
+++ b/DCImobiliare/frontend/templates/frontend/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
     <title>DCImobiliare</title>
+    {% csrf_token %}
 </head>
 
 <body>
