--- a/DCImobiliare/frontend/src/assets/css/properties.css
+++ b/DCImobiliare/frontend/src/assets/css/properties.css
@@ -1,11 +1,51 @@
 .view-cascade {
-  margin-top: -1.25rem;
+  margin-top: -1.45rem;
   margin-left: -10%;
 
   border-radius: 0.25rem;
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
 
+.card {
+  transition: box-shadow 0.25s ease-in-out !important;
+}
+
+.card:hover {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+.img {
+  cursor: pointer;
+}
+
+.full-div-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-indent: -9999px;
+  overflow: hidden;
+}
+
+.price-font {
+  letter-spacing: 0.05rem !important;
+  font-weight: bold;
+  font-size: 1.35rem !important;
+  color: black;
+  text-align: left;
+}
+
+.btn-info {
+  background-color: #005720 !important;
+}
+
+.btn-info:hover {
+  background-color: #003720 !important;
+}
+
+.card-img-top {
+  cursor: pointer !important;
+}
 .view {
   position: relative;
   overflow: hidden;
@@ -14,8 +54,12 @@
 
 @media (max-width: 650px) {
   .view-cascade {
-    margin-top: -1.25rem;
-    margin-left: 4%;
-    margin-right: 4%;
+    margin-top: -1.5rem !important;
+    margin-left: 4% !important;
+    margin-right: 4% !important;
+  }
+  .margin-sm {
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
   }
 }
