--- a/DCImobiliare/frontend/src/assets/css/properties.css
+++ b/DCImobiliare/frontend/src/assets/css/properties.css
@@ -43,6 +43,15 @@
   background-color: #003720 !important;
 }
 
+.btn-shadow {
+  transition: box-shadow 0.25s ease-in-out !important;
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+}
+
+.btn-shadow:hover {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+
 .card-img-top {
   cursor: pointer !important;
 }
