--- a/DCImobiliare/frontend/src/assets/css/properties.css
+++ b/DCImobiliare/frontend/src/assets/css/properties.css
@@ -58,7 +58,7 @@
   background-color: #005720 !important;
 }
 
-.btn-info:hover {
+.btn-info:hover:enabled {
   background-color: #003720 !important;
 }
 
