--- a/DCImobiliare/frontend/templates/frontend/index.html
+++ b/DCImobiliare/frontend/templates/frontend/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load static %}
 <head>
+    <link rel="icon" type="image/png" href="{% static "frontend/logo.png" %}">
     <meta charset="UTF-8">
     <meta name="viewpoer" content="width=device-width" , initial-scale="1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
-    <title>DCImobiliare</title>
+    <title>Imobiliare - Daniel Chitu</title>
     {% csrf_token %}
 </head>
 
 <body>
     <div id="app"></div>
-    {% load static %}
     <script src="{% static "frontend/main.js" %}"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
