--- a/DCImobiliare/frontend/src/assets/css/properties.css
+++ b/DCImobiliare/frontend/src/assets/css/properties.css
@@ -16,6 +16,9 @@
 .img {
   cursor: pointer;
 }
+.hidden {
+  visibility: hidden !important;
+}
 
 .full-div-link {
   position: absolute;
@@ -56,6 +59,9 @@
 
 .btn-info {
   background-color: #005720 !important;
+}
+.btn-info:disabled {
+  background-color: #c3c3c3 !important;
 }
 
 .btn-info:hover:enabled {
@@ -143,6 +149,14 @@
   padding-right: 1.25rem;
 }
 
+.btn-table-option {
+  padding-left: 0.625rem !important;
+  padding-right: 0.625rem !important;
+
+  height: 2.5rem !important;
+  text-align: center;
+}
+
 @media (max-width: 650px) {
   .view-cascade {
     margin-top: -1.5rem !important;
@@ -154,7 +168,7 @@
     margin-right: 1rem !important;
   }
 
-  .table-price {
+  /* .table-price {
     font-size: 1.35rem !important;
   }
 
@@ -164,5 +178,11 @@
 
   .table-euro {
     font-size: 1rem !important;
+  } */
+}
+
+@media (max-width: 850px) {
+  .display-none {
+    display: none;
   }
 }
