--- a/DCImobiliare/frontend/src/assets/css/default.css
+++ b/DCImobiliare/frontend/src/assets/css/default.css
@@ -12,7 +12,13 @@
   background-size: cover !important;
   position: relative;
 }
+.transparent-bkg {
+  background-color: rgba(255, 255, 255, 0) !important;
+}
 
+.navbar {
+  z-index: 1000 !important;
+}
 .hidden {
   display: none;
 }
@@ -85,24 +91,88 @@ input[type="email"]:focus {
   text-decoration: none !important;
 }
 
-.background-full-width-section1::before {
+/* .background-full-width-section1::before {
   content: "";
   position: absolute;
-  background-image: url("/static/Building1.svg");
-  width: 70%;
-  height: 70%;
+  background-image: url("/static/Cloud1.svg");
+  width: 100%;
+  height: 100%;
   background-repeat: no-repeat;
-  left: 0;
-  top: 41%;
-  animation: bounce 2s infinite alternate;
-  -webkit-animation: bounce 2s infinite alternate;
+  top: 75%;
+  animation: shift 2.5s infinite alternate;
+  -webkit-animation: shift 2.5s infinite alternate;
+}
+
+.background-full-width-section1::after {
+  content: "";
+  position: absolute;
+  background-image: url("/static/Cloud2.svg");
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  top: 75%;
+  animation: shift2 1.5s infinite alternate;
+  -webkit-animation: shift2 1.5s infinite alternate;
+}
+
+.bg-clouds::before {
+  content: "";
+  position: absolute;
+  background-image: url("/static/Cloud3.svg");
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  top: 78%;
+  animation: shift3 1.25s infinite alternate;
+  -webkit-animation: shift3 1.25s infinite alternate;
+}
+
+.bg-clouds::after {
+  content: "";
+  position: absolute;
+  background-image: url("/static/Cloud4.svg");
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  top: 50%;
+  animation: shift 1.5s infinite alternate;
+  -webkit-animation: shift 1.5s infinite alternate;
+}
+
+.bg-clouds2::before {
+  content: "";
+  position: absolute;
+  background-image: url("/static/Cloud5.svg");
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  top: 18%;
+  animation: shift2 1.25s infinite alternate;
+  -webkit-animation: shift2 1.25s infinite alternate;
+}
+
+.bg-clouds2::after {
+  content: "";
+  position: absolute;
+  background-image: url("/static/Cloud6.svg");
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  top: 18%;
+  animation: shift4 2.25s infinite alternate;
+  -webkit-animation: shift4 2.25s infinite alternate;
+} */
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .background-full-width-section1 {
-  background-image: url("/static/back1.svg");
+  background-image: url("/static/info-bkg.svg");
   background-position: center center !important;
   background-repeat: no-repeat !important;
-  background-size: cover !important;
+  background-size: 1920px 1080px;
+  overflow: hidden;
 }
 
 .background-full-width-section2 {
@@ -146,14 +216,41 @@ input[type="email"]:focus {
   color: #ffffff !important;
 }
 
+.display-gone {
+  display: none !important;
+}
+.display-visible {
+  display: visible !important;
+}
+
+.buildings {
+  z-index: 100 !important;
+}
+
+@media (max-width: 1500px) {
+  .title-extra-large {
+    font-size: 3rem !important;
+    line-height: 3rem !important;
+  }
+  .text-large {
+    font-size: 1.45rem !important;
+    line-height: 1.255rem !important;
+  }
+  .buildings-bkg {
+    right: 10% !important;
+  }
+}
+
 @media (max-width: 1090px) {
   .text-large {
-    font-size: 2.75rem !important;
-    line-height: 4.255rem !important;
+    text-align: center !important;
+    font-size: 1.45rem !important;
+    line-height: 1.755rem !important;
   }
   .title-extra-large {
-    font-size: 5.25rem !important;
-    line-height: 4.79rem !important;
+    text-align: center !important;
+    font-size: 3.5rem !important;
+    line-height: 3.79rem !important;
   }
   .title-very-large {
     font-size: 3.55rem !important;
@@ -173,9 +270,25 @@ input[type="email"]:focus {
   .text-motivation {
     color: #1a1a1a !important;
   }
+  .buildings {
+    margin-top: 5rem !important;
+    text-align: center !important;
+  }
+  .display-inline {
+    display: inline-block;
+  }
+  .background-full-width-section1 {
+    background-image: none;
+  }
+  .buildings-bkg {
+    bottom: 15%;
+  }
 }
 
 @media (max-width: 768px) {
+  .buildings {
+    margin-top: 5rem !important;
+  }
   .text-center-md {
     text-align: center !important;
   }
@@ -191,13 +304,51 @@ input[type="email"]:focus {
   .text-white {
     color: #000000 !important;
   }
+  .buildings-bkg {
+    bottom: 35% !important;
+    right: 15% !important;
+  }
 }
 
-@keyframes bounce {
+@media (max-width: 576px) {
+  .buildings-bkg {
+    bottom: 35% !important;
+    right: 50% !important;
+  }
+}
+
+@keyframes shift {
   from {
-    top: 41%;
+    left: 0%;
   }
   to {
-    top: 34%;
+    left: 2%;
+  }
+}
+
+@keyframes shift2 {
+  from {
+    left: 25%;
+  }
+  to {
+    left: 27%;
+  }
+}
+
+@keyframes shift3 {
+  from {
+    left: 15%;
+  }
+  to {
+    left: 17%;
+  }
+}
+
+@keyframes shift4 {
+  from {
+    left: 30%;
+  }
+  to {
+    left: 32%;
   }
 }
