--- a/DCImobiliare/frontend/src/assets/css/default.css
+++ b/DCImobiliare/frontend/src/assets/css/default.css
@@ -25,10 +25,11 @@
 textarea {
   resize: none;
 }
-
+/* 
 .active {
   color: aqua;
-}
+} */
+
 .bodyForm {
   background-color: #ffffff;
 }
@@ -226,6 +227,19 @@ input[type="email"]:focus {
 .buildings {
   z-index: 100 !important;
 }
+.terms-paragraph {
+  font-size: 1rem !important;
+  color: #666666 !important;
+  line-height: 1.2rem;
+}
+.terms-paragraph strong {
+  font-weight: bold;
+  color: #000000;
+}
+.sticky-ul {
+  position: sticky !important;
+  top: 0 !important;
+}
 
 @media (max-width: 1500px) {
   .title-extra-large {
@@ -283,9 +297,21 @@ input[type="email"]:focus {
   .buildings-bkg {
     bottom: 20%;
   }
+  .text-white {
+    color: #000000 !important;
+  }
+}
+
+@media (max-width: 992px) {
+  .margin-top-md {
+    margin-top: 150px !important;
+  }
 }
 
 @media (max-width: 768px) {
+  .margin-top-md {
+    margin-top: 0px !important;
+  }
   .buildings {
     margin-top: 5rem !important;
   }
@@ -301,9 +327,6 @@ input[type="email"]:focus {
     border-left: 0.25rem solid;
   }
 
-  .text-white {
-    color: #000000 !important;
-  }
   .buildings-bkg {
     bottom: 35% !important;
     right: 15% !important;
