--- a/DCImobiliare/frontend/templates/frontend/index.html
+++ b/DCImobiliare/frontend/templates/frontend/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% load static %}
+{% load staticfiles %}
 <head>
     <link rel="icon" type="image/png" href="{% static "frontend/logo.png" %}">
     <meta charset="UTF-8">
