Made final CSS adjustments

--- a/DCImobiliare/frontend/src/assets/css/properties.css
+++ b/DCImobiliare/frontend/src/assets/css/properties.css
@@ -167,6 +167,9 @@
     margin-left: 1rem !important;
     margin-right: 1rem !important;
   }
+  .body-form {
+    padding: 0.25rem !important;
+  }
 
   /* .table-price {
     font-size: 1.35rem !important;
