Modified pages structure

--- a/DCImobiliare/frontend/src/assets/css/default.css
+++ b/DCImobiliare/frontend/src/assets/css/default.css
@@ -37,6 +37,13 @@ textarea {
 .btn-sell:hover {
   background-color: #fbe8cd !important;
 }
+.btn-sell-services {
+  background-color: #005720 !important;
+}
+
+.btn-sell-services:hover {
+  background-color: #029658 !important;
+}
 /* 
 .active {
   color: aqua;
