--- a/DCImobiliare/frontend/src/assets/css/default.css
+++ b/DCImobiliare/frontend/src/assets/css/default.css
@@ -190,6 +190,10 @@ input[type="email"]:focus {
   text-align: center !important;
 }
 
+.hv-100 {
+  height: 100vh !important;
+}
+
 @media (max-width: 1500px) {
   .title-extra-large {
     font-size: 3rem !important;
