--- a/DCImobiliare/frontend/src/assets/css/default.css
+++ b/DCImobiliare/frontend/src/assets/css/default.css
@@ -257,7 +257,7 @@ input[type="email"]:focus {
 
 @media (max-width: 992px) {
   .display-none {
-    display: none;
+    display: none !important;
   }
   .margin-top-md {
     margin-top: 150px !important;
