--- a/DCImobiliare/frontend/src/assets/css/default.css
+++ b/DCImobiliare/frontend/src/assets/css/default.css
@@ -193,6 +193,9 @@ input[type="email"]:focus {
 .hv-100 {
   height: 100vh !important;
 }
+.page-footer {
+  border-top: 1px solid rgba(0, 0, 0, 0.1) !important;
+}
 
 @media (max-width: 1500px) {
   .title-extra-large {
